Fix UI background overflow
Add Input command in terminal for reference
Disable scrollbar pause if input command

--- a/src/stylesheets/components/_navbar.scss
+++ b/src/stylesheets/components/_navbar.scss
@@ -60,5 +60,4 @@
 
 .espcontainer {
     position: relative;
-    height: calc(100% - 130px);
 }
